# PROYECTO_FINAL_BASE_DE-DATOS

./: CMakeLists.txt  Makefile  README.md  main  main.cpp  users.txt  usuarios.txt
include/: admin.h  basic.h  database.h  liberman.h  menu.h  permission.h  permission_user.h  role.h  student.h  teacher.h  user.h
src/: liberman.cpp  main.cpp  main2.cpp  menu.cpp  permission.cpp  permission_user.cpp  role.cpp  user.cpp
